geo location and pricing ... statically handled to make a base frame for the app ... and get it working together... will add complexities after the foundation cures a little

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,16 @@ add_library(domain
     src/domain/driver/Driver.cc
     src/domain/trip/Trip.h
     src/domain/trip/Trip.cc
+    src/domain/geo/GeoPoint.h
+    src/domain/geo/GeoPoint.cc
+    src/domain/geo/GeoFence.h
+    src/domain/geo/GeoFence.cc
+    src/domain/geo/Place.h
+    src/domain/geo/Place.cc
+    src/domain/pricing/FareCalculator.h
+    src/domain/pricing/FareCalculator.cc
+    src/domain/pricing/SurgeModel.h
+    src/domain/pricing/SurgeModel.cc
 )
 
 # Add the main executable
