use cases and memory formed ... the current output and progress for the program is ...     1 Uber C++ Clone     2 ----------------     3 Requesting a ride from Times Square to Central Park...     4   [RequestRideUseCase] Rider 1 fetched from repository.     5   [RequestRideUseCase] Trip 1 saved to repository.     6   [RequestRideUseCase] Route found! Distance: 5000m, Duration: 600s     7   [RequestRideUseCase] Best driver found: Toyota Camry     8 Successfully created a trip request!     9 Trip state: 1    10 Trip current location: 0, 0    11   [AssignDriverUseCase] Driver Toyota Camry assigned to trip. Trip state updated to Assigned.    12 Trip state after assignment: 1    13    14 Simulating location updates...    15   [UpdateLocationUseCase] Trip location updated to: 40.76, -73.98    16   [UpdateLocationUseCase] Trip location updated to: 40.77, -73.975    17 Final trip location: 40.77, -73.975    18    19 Sharing ride status...    20   [ShareRideStatusUseCase] Sharing status with Rider:    21     Trip State: 1    22     Current Location: 40.77, -73.975    23    24 Getting a fare quote...    25 Estimated fare: .6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,10 @@ add_library(application
     src/application/UseCases/QuoteFareUseCase.cc
     src/application/UseCases/AssignDriverUseCase.h
     src/application/UseCases/AssignDriverUseCase.cc
+    src/application/UseCases/UpdateLocationUseCase.h
+    src/application/UseCases/UpdateLocationUseCase.cc
+    src/application/UseCases/ShareRideStatusUseCase.h
+    src/application/UseCases/ShareRideStatusUseCase.cc
 )
 
 # The application layer depends on the domain layer.
@@ -54,6 +58,13 @@ target_link_libraries(application domain)
 add_library(infrastructure
     src/infrastructure/routing/MockRouterAdapter.h
     src/infrastructure/routing/MockRouterAdapter.cc
+    src/infrastructure/persistence/IRepository.h
+    src/infrastructure/persistence/InMemoryRiderRepository.h
+    src/infrastructure/persistence/InMemoryRiderRepository.cc
+    src/infrastructure/persistence/InMemoryDriverRepository.h
+    src/infrastructure/persistence/InMemoryDriverRepository.cc
+    src/infrastructure/persistence/InMemoryTripRepository.h
+    src/infrastructure/persistence/InMemoryTripRepository.cc
 )
 
 # The infrastructure layer depends on the domain layer.
